k8s/stage/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stage
  labels:
    environment: stage
    managed-by: jenkins
