k8s/stage/circleguard-file-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circleguard-file-service
  namespace: stage
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: circleguard-file-service
  template:
    metadata:
      labels:
        app: circleguard-file-service
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: circleguard-file-service
        image: circleguardacrcore.azurecr.io/circle-guard/circleguard-file-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          tcpSocket:
            port: 8085
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 12
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8085
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: circleguard-file-service
  namespace: stage
spec:
  selector:
    app: circleguard-file-service
  type: NodePort
  ports:
  - port: 80
    targetPort: 8085
