k8s/stage/circleguard-gateway-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circleguard-gateway-service
  namespace: stage
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: circleguard-gateway-service
  template:
    metadata:
      labels:
        app: circleguard-gateway-service
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: circleguard-gateway-service
        image: circleguardacrcore.azurecr.io/circle-guard/circleguard-gateway-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8087
        resources:
          requests:
            memory: "256Mi"
            cpu: "1m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          tcpSocket:
            port: 8087
          initialDelaySeconds: 90
          periodSeconds: 5
          failureThreshold: 12
        livenessProbe:
          tcpSocket:
            port: 8087
          initialDelaySeconds: 120
          periodSeconds: 15
          failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: circleguard-gateway-service
  namespace: stage
spec:
  selector:
    app: circleguard-gateway-service
  type: NodePort
  ports:
  - port: 80
    targetPort: 8087
