k8s/stage/circleguard-notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circleguard-notification-service
  namespace: stage
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: circleguard-notification-service
  template:
    metadata:
      labels:
        app: circleguard-notification-service
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: circleguard-notification-service
        image: circleguardacrcore.azurecr.io/circle-guard/circleguard-notification-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        resources:
          requests:
            memory: "128Mi"
            cpu: "1m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8082
          initialDelaySeconds: 90
          periodSeconds: 5
          failureThreshold: 12
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8082
          initialDelaySeconds: 120
          periodSeconds: 15
          failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: circleguard-notification-service
  namespace: stage
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8082"
spec:
  selector:
    app: circleguard-notification-service
  type: NodePort
  ports:
  - port: 80
    targetPort: 8082
